--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^4.6.2",
+    "express": "^4.18.2",
+    "firebase": "^10.7.0",
+    "fs": "^0.0.1-security",
+    "node": "^21.2.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^18.2.0",
