--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jasperlyf.github.io/portfolio-main",
   "name": "portfolio-main",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +10,6 @@
     "axios": "^1.6.2",
     "bootstrap": "^4.6.2",
     "express": "^4.18.2",
-    "firebase": "^10.7.0",
     "fs": "^0.0.1-security",
     "node": "^21.2.0",
     "path": "^0.12.7",
@@ -22,6 +22,8 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
   }
 }
