fixing github pages, foodapp try using json to read

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jasperlyf.github.io/portfolio-main",
+  "homepage": "https://jasperlyf.github.io/portfolio-main/",
   "name": "portfolio-main",
   "version": "0.1.0",
   "private": true,
