--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^4.6.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jquery": "^3.7.1",
     "node": "^21.2.0",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^18.2.0",
